Fixes
- no scrollbar
- added theme
- changed snell font

--- a/src/assets/styles/WordPage.css
+++ b/src/assets/styles/WordPage.css
@@ -1,9 +1,10 @@
 .bg-letter {
 	position: relative;
-	/* overflow: hidden; */
+	overflow: hidden;
 }
 
 .bg-letter::after {
+	opacity: 15%;
 	z-index: 20;
 	position: absolute;
 	top: 0;
